--- a/app/src/main/res/layout/activity_change_name.xml
+++ b/app/src/main/res/layout/activity_change_name.xml
@@ -31,7 +31,7 @@
 
 
     <Button
-        android:id="@+id/save_btn"
+        android:id="@+id/buttonsave"
         android:layout_width="247dp"
         android:layout_height="49dp"
         android:layout_marginBottom="264dp"
@@ -55,7 +55,7 @@
         android:text="First Name"
         android:textColor="#000000"
         android:textSize="22sp"
-        app:layout_constraintBottom_toTopOf="@+id/firstName_box"
+        app:layout_constraintBottom_toTopOf="@+id/editfirstname"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.069"
         app:layout_constraintStart_toStartOf="parent" />
@@ -68,13 +68,13 @@
         android:text="Last Name"
         android:textColor="#000000"
         android:textSize="22sp"
-        app:layout_constraintBottom_toTopOf="@+id/lastName_box"
+        app:layout_constraintBottom_toTopOf="@+id/editlastname"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.069"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/firstName_box"
+        android:id="@+id/editfirstname"
         android:layout_width="372dp"
         android:layout_height="71dp"
         android:layout_marginBottom="16dp"
@@ -89,7 +89,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/lastName_box"
+        android:id="@+id/editlastname"
         android:layout_width="372dp"
         android:layout_height="71dp"
         android:layout_marginBottom="52dp"
@@ -98,7 +98,7 @@
         android:hint="Last Name"
         android:inputType="textPersonName"
         android:paddingStart="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/save_btn"
+        app:layout_constraintBottom_toTopOf="@+id/buttonsave"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.41"
         app:layout_constraintStart_toStartOf="parent" />
