--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -7,7 +7,7 @@
     tools:context=".forgot_password">
 
     <Button
-        android:id="@+id/submitbtn"
+        android:id="@+id/resetbtn"
         android:layout_width="225dp"
         android:layout_height="56dp"
         android:layout_marginEnd="92dp"
@@ -44,7 +44,7 @@
 
 
     <EditText
-        android:id="@+id/txtbox_email"
+        android:id="@+id/resetemail"
         android:layout_width="374dp"
         android:layout_height="59dp"
         android:layout_marginBottom="104dp"
@@ -53,7 +53,7 @@
         android:hint="Email"
         android:paddingStart="10dp"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toBottomOf="@+id/submitbtn"
+        app:layout_constraintBottom_toBottomOf="@+id/resetbtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -66,7 +66,7 @@
         android:text="Forgot Password"
         android:textColor="#FFFFFF"
         android:textSize="40sp"
-        app:layout_constraintBottom_toTopOf="@+id/txtbox_email"
+        app:layout_constraintBottom_toTopOf="@+id/resetemail"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -78,7 +78,7 @@
         android:text="Email"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/txtbox_email"
+        app:layout_constraintBottom_toTopOf="@+id/resetemail"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
