--- a/app/src/main/res/layout/activity_recover.xml
+++ b/app/src/main/res/layout/activity_recover.xml
@@ -87,13 +87,13 @@
         android:hint= "Confirm Password"
         android:paddingStart="10dp"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/submitbtn"
+        app:layout_constraintBottom_toTopOf="@+id/resetbtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.34"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/submitbtn"
+        android:id="@+id/resetbtn"
         android:layout_width="225dp"
         android:layout_height="56dp"
         android:layout_marginEnd="92dp"
