--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
-        <item>@font/montserrat_subrayada</item>
+        <item>@font/anaheim</item>
+        <item>@font/baumans</item>
+        <item>@font/montserrat</item>
         <item>@font/open_sans_bold</item>
-        <item>@font/viga</item>
+        <item>@font/roboto_light</item>
+        <item>@font/roboto_thin</item>
     </array>
 </resources>
