--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home_page">
+    tools:context=".homee_page">
 
     <ImageView
         android:id="@+id/redBackground2"
@@ -48,7 +48,7 @@
         android:layout_marginBottom="428dp"
         android:background="@drawable/edit_round"
         android:fontFamily="sans-serif-medium"
-        android:text="Add Medications"
+        android:text="@string/add_medications"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -63,12 +63,12 @@
         android:background="@drawable/edit_round"
         android:fontFamily="sans-serif-medium"
         android:onClick="Home_To_Health"
-        android:text="Add Measurements"
+        android:text="@string/add_measurements"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="OnClick" />
+        tools:ignore="OnClick,UsingOnClickInXml" />
 
     <View
         android:layout_width="wrap_content"
@@ -123,7 +123,8 @@
         android:onClick="Home_To_User"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/user" />
+        app:srcCompat="@drawable/user"
+        tools:ignore="UsingOnClickInXml" />
 
     <TextView
         android:id="@+id/textViewHome"
@@ -131,7 +132,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
-        android:text="Home"
+        android:text="@string/home"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -143,7 +144,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="124dp"
         android:layout_marginBottom="8dp"
-        android:text="Today"
+        android:text="@string/today"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -155,7 +156,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="240dp"
         android:layout_marginBottom="8dp"
-        android:text="History"
+        android:text="@string/history"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -167,7 +168,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="340dp"
         android:layout_marginBottom="8dp"
-        android:text="Profile"
+        android:text="@string/profile"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -180,12 +181,9 @@
         android:layout_marginStart="152dp"
         android:layout_marginBottom="672dp"
         android:fontFamily="@font/viga"
-        android:text="TextView"
+        android:text="@string/textview"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-    />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
