--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -45,7 +45,7 @@
         android:layout_height="103dp"
         android:layout_marginEnd="168dp"
         android:layout_marginBottom="600dp"
-        android:text="Create an Account"
+        android:text="@string/create_an_account"
         android:textColor="#000000"
         android:textSize="40sp"
         android:textStyle="bold"
