--- a/app/src/main/res/layout/activity_recommendations.xml
+++ b/app/src/main/res/layout/activity_recommendations.xml
@@ -17,8 +17,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/background" />
 
+    <ImageButton
+        android:id="@+id/imageBack2"
+        android:layout_width="64dp"
+        android:layout_height="68dp"
+        android:layout_marginEnd="360dp"
+        android:layout_marginBottom="696dp"
+        android:backgroundTint="#E73927"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/backarrow" />
+
     <TextView
-        android:id="@+id/recommendationsTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="668dp"
@@ -28,5 +38,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
