--- a/app/src/main/res/layout/activity_instruction_slidethree.xml
+++ b/app/src/main/res/layout/activity_instruction_slidethree.xml
@@ -12,9 +12,9 @@
         android:layout_width="514dp"
         android:layout_height="266dp"
         android:layout_marginStart="76dp"
-        android:layout_marginBottom="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="60dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
         app:srcCompat="@drawable/next"
         tools:ignore="OnClick" />
 
