--- a/app/src/main/res/layout/activity_instruction_slidetwo.xml
+++ b/app/src/main/res/layout/activity_instruction_slidetwo.xml
@@ -10,10 +10,10 @@
         android:id="@+id/instruction_two_btn"
         android:layout_width="514dp"
         android:layout_height="266dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginBottom="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="72dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
         app:srcCompat="@drawable/next"
         tools:ignore="OnClick" />
 
